--- a/style.css
+++ b/style.css
@@ -150,23 +150,18 @@ body {
 #main-container {
     display: flex;
     flex-direction: column;
-    /* border: 5px solid salmon; */
     background: linear-gradient(63deg, #040006 -1.16%, #62005F 112.81%);
     width: 1280px;
     height: 832px;
     position: relative;
-    /* margin: auto; */
 }
 
 #header-container {
-    /* border: 2px solid red; */
     display: flex;
-    /* justify-content: center; */
     justify-content: space-between;
     align-items: center;
     padding: 40px 100px;
     padding-bottom: 0px;
-    /* flex-direction: column; */
 }
 
 
@@ -183,12 +178,19 @@ body {
     gap: 55px;
 }
 
-#nav-wrap-left>h5>img {
+#logo {
+    background: url(logos/logo1.svg);
+    width: 26.108px;
+    height: 25.452px;
+    transform: rotate(4.678deg);
+}
+
+/* #nav-wrap-left>h5>img {
     width: 13.649px;
     height: 12.754px;
     transform: rotate(7.822deg);
     flex-shrink: 0;
-}
+} */
 
 #nav-wrap-right {
     display: flex;
@@ -203,12 +205,10 @@ body {
 }
 
 #nav-left>h1 {
-    color: #FFF;
     font-size: 22px;
     font-style: normal;
     font-weight: 700;
     line-height: 28px;
-    /* 127.273% */
 }
 
 #nav-left>img {
@@ -218,12 +218,10 @@ body {
 }
 
 #nav-wrap-left>h5 {
-    color: #FFF;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 28px;
-    /* 175% */
 }
 
 #nav-wrap-left>h5:hover,
@@ -246,7 +244,6 @@ button {
 }
 
 #nav-wrap-right>h5 {
-    color: #FFF;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
@@ -260,29 +257,16 @@ button {
     flex-shrink: 0;
 }
 
-
-
-
 #page-container {
-    /* border: 5px solid red; */
     display: flex;
     flex: 1 1 1px;
 }
 
-#left-container,
-#right-container {
-    /* flex: 1; */
-    /* border: 5px solid green; */
-
-}
-
 #left-container {
-    /* width: 516px; */
     padding-left: 100px;
 }
 
 #info-box {
-    /* border: 5px solid rebeccapurple; */
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
@@ -290,17 +274,14 @@ button {
 }
 
 #info-top {
-    /* border: 5px solid yellowgreen; */
     margin-top: 115px;
 }
 
 #info-top>h2 {
-    /* font-family: Inter; */
     font-size: 18px;
     font-style: normal;
     font-weight: 600;
     line-height: 28px;
-    /* 155.556% */
     background: linear-gradient(101deg, #FD7452 18.7%, #FF4265 102.73%);
     background-clip: text;
     -webkit-background-clip: text;
@@ -308,7 +289,6 @@ button {
 }
 
 #info-top>h3 {
-    color: #FFF;
 
     font-family: Inter;
     font-size: 52px;
@@ -322,13 +302,10 @@ button {
 #info-top>p {
     width: 496px;
     height: 48px;
-    color: #FFF;
-    /* font-family: Inter; */
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 28px;
-    /* 175% */
 }
 
 #info-top>h3>span {
@@ -345,7 +322,6 @@ button {
 
 /* btn css */
 #btn-container {
-    /* border: 2px solid salmon; */
     display: flex;
     align-items: center;
     gap: 16px;
@@ -364,20 +340,32 @@ button {
 }
 
 #btn-container>button>h3 {
-    color: #FFF;
-    /* leading-trim: both; */
-    /* text-edge: cap; */
-    /* font-family: Inter; */
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 28px;
-    /* 200% */
 }
 
-button>img {
-    border-radius: 24px;
-    background: #FF593C;
+#arrow {
+    display: flex;
+    width: 16px;
+    height: 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    flex-shrink: 0;
+    border-radius: 64px;
+    box-shadow: 2px 1px 5px 0px rgba(0, 0, 0, 0.23);
+}
+
+#arrow>img {
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+}
+
+button {
+    color: #FFF;
 }
 
 #btn-container>a {
@@ -393,7 +381,6 @@ button>img {
 
 /* "experts wraper */
 #experts-wrap-1 {
-    /* border: 3px solid rebeccapurple; */
     display: inline-flex;
     align-items: center;
     gap: 19px;
@@ -407,7 +394,6 @@ button>img {
 }
 
 #experts-wrap-2 {
-    /* border: 3px solid red; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -423,13 +409,10 @@ button>img {
 #exp-b {
     width: 284px;
     height: 48px;
-    color: #FFF;
-    /* font-family: Inter; */
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    /* 171.429% */
 }
 
 #exp-t-a {
@@ -443,14 +426,11 @@ button>img {
 }
 
 #exp-t-b {
-    /* color: #FFF; */
-    /* font-family: Inter; */
     padding-left: 4px;
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
-    /* 171.429% */
 }
 
 #exp-t-a-a,
@@ -460,7 +440,6 @@ button>img {
     flex-shrink: 0;
     background: url(icons/person1.svg);
     border-radius: 40px;
-    border: 2px solid #FFF;
     background-color: lightgray;
     background-size: cover;
     background-repeat: no-repeat;
@@ -471,10 +450,6 @@ button>img {
     background: url(icons/person2.svg);
     position: absolute;
     left: 28px;
-
-    /* background-color: lightgray;
-    background-size: cover;
-    background-repeat: no-repeat; */
 }
 
 
@@ -498,19 +473,10 @@ button>img {
 }
 
 #dog {
-
-    /* z-index: 100; */
-    /* z-index: 5; */
     width: 513px;
     height: 513px;
     flex-shrink: 0;
     background: url(images/dog.png);
-    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat; */
-
-}
-
-#dogo-wraper {
-    /* position: relative; */
 }
 
 #dogo1 {
@@ -519,14 +485,10 @@ button>img {
     flex-shrink: 0;
     border-radius: 57px;
     border: 3px solid #BA92A7;
-    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat, #D9D9D9; */
     background: url(icons/dogo1.svg);
     position: absolute;
     top: 664px;
     left: 607px;
-    /* top: 664px;
-    right: 607px; */
-    /* background-position: top 100px center; */
 }
 
 #dogo2 {
@@ -536,7 +498,6 @@ button>img {
     flex-shrink: 0;
     border-radius: 67.614px;
     border: 3px solid #BA92A7;
-    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat, #D9D9D9; */
     background: url(icons/dogo2.svg);
     position: absolute;
     top: 335px;
@@ -549,7 +510,6 @@ button>img {
     flex-shrink: 0;
     border-radius: 52px;
     border: 3px solid #BA92A7;
-    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat, #D9D9D9; */
     background: url(icons/dogo3.svg);
     position: absolute;
     top: 134px;
@@ -562,7 +522,6 @@ button>img {
     flex-shrink: 0;
     border-radius: 86px;
     border: 3px solid #BA92A7;
-    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat, #D9D9D9; */
     background: url(icons/dogo4.svg);
     position: absolute;
     top: 172px;
@@ -575,9 +534,45 @@ button>img {
     flex-shrink: 0;
     border-radius: 80px;
     border: 3px solid #BA92A7;
-    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat, #D9D9D9; */
     background: url(icons/dogo5.svg);
     position: absolute;
     top: 100px;
     left: 1100px;
+}
+
+
+#ellipse1 {
+    width: 659px;
+    height: 659px;
+    transform: rotate(3.965deg);
+    flex-shrink: 0;
+    border-radius: 659px;
+    background: radial-gradient(33.54% 33.54% at 50% 50%, rgba(255, 80, 101, 0.07) 0%, rgba(255, 82, 109, 0.00) 100%);
+    position: absolute;
+    top: -115px;
+    left: -268px;
+}
+
+#ellipse2 {
+    width: 660px;
+    height: 660px;
+    transform: rotate(3.965deg);
+    flex-shrink: 0;
+    border-radius: 660px;
+    background: radial-gradient(33.54% 33.54% at 50% 50%, rgba(255, 185, 80, 0.07) 0%, rgba(255, 82, 109, 0.00) 100%);
+    position: absolute;
+    top: 99px;
+    left: -248px;
+}
+
+#ellipse3 {
+    width: 659px;
+    height: 659px;
+    transform: rotate(3.965deg);
+    flex-shrink: 0;
+    border-radius: 659px;
+    background: radial-gradient(33.54% 33.54% at 50% 50%, rgba(157, 255, 80, 0.07) 0%, rgba(255, 82, 109, 0.00) 100%);
+    position: absolute;
+    top: 256px;
+    left: -192px;
 }
