--- a/style.css
+++ b/style.css
@@ -488,7 +488,7 @@ a:hover {
     height: 57px;
     flex-shrink: 0;
     border-radius: 57px;
-    border: 3px solid #BA92A7;
+    /* border: 3px solid #BA92A7; */
     background: url(icons/dogo1.svg);
     position: absolute;
     top: 664px;
@@ -501,7 +501,7 @@ a:hover {
     transform: rotate(-1.256deg);
     flex-shrink: 0;
     border-radius: 67.614px;
-    border: 3px solid #BA92A7;
+    /* border: 3px solid #BA92A7; */
     background: url(icons/dogo2.svg);
     position: absolute;
     top: 335px;
@@ -513,7 +513,7 @@ a:hover {
     height: 52px;
     flex-shrink: 0;
     border-radius: 52px;
-    border: 3px solid #BA92A7;
+    /* border: 3px solid #BA92A7; */
     background: url(icons/dogo3.svg);
     position: absolute;
     top: 134px;
@@ -525,7 +525,7 @@ a:hover {
     height: 86px;
     flex-shrink: 0;
     border-radius: 86px;
-    border: 3px solid #BA92A7;
+    /* border: 3px solid #BA92A7; */
     background: url(icons/dogo4.svg);
     position: absolute;
     top: 172px;
@@ -537,7 +537,7 @@ a:hover {
     height: 80px;
     flex-shrink: 0;
     border-radius: 80px;
-    border: 3px solid #BA92A7;
+    /* border: 3px solid #BA92A7; */
     background: url(icons/dogo5.svg);
     position: absolute;
     top: 100px;
@@ -579,4 +579,16 @@ a:hover {
     position: absolute;
     top: 256px;
     left: -192px;
+}
+
+#logo2 {
+    background: url(logos/logo2.svg);
+    width: 13.649px;
+    width: 13.649px;
+    height: 12.754px;
+    transform: rotate(7.822deg);
+    flex-shrink: 0;
+    position: absolute;
+    top: 46px;
+    left: 385px;
 }
