--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/* FONT IMPORT */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+/* CSS RESET */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -85,13 +88,13 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    font-family: 'Inter', sans-serif;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  font-family: "Inter", sans-serif;
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -106,489 +109,504 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
+  line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: '';
-    content: none;
+  content: "";
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-/* main css */
+/*  */
+/* MAIN CSS STARTS HERE: */
 /*  */
 
 body {
-    font-family: 'Inter', sans-serif;
-    color: #FFF;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  font-family: "Inter", sans-serif;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #main-container {
-    display: flex;
-    flex-direction: column;
-    background: linear-gradient(63deg, #040006 -1.16%, #62005F 112.81%);
-    width: 1280px;
-    height: 832px;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(63deg, #040006 -1.16%, #62005f 112.81%);
+  width: 1280px;
+  height: 832px;
+  position: relative;
 }
+
+/*  */
+/* HEADER CSS*/
 
 #header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px 100px;
-    padding-bottom: 0px;
-}
-
-
-
-#nav-wrap {
-    display: inline-flex;
-    align-items: center;
-    gap: 188px;
-}
-
-#nav-wrap-left {
-    display: flex;
-    align-items: flex-end;
-    gap: 55px;
-}
-
-#logo {
-    background: url(logos/logo1.svg);
-    width: 26.108px;
-    height: 25.452px;
-    transform: rotate(4.678deg);
-}
-
-#nav-wrap-right {
-    display: flex;
-    align-items: center;
-    gap: 9px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 100px;
+  padding-bottom: 0px;
 }
 
 #nav-left {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
 }
 
-#nav-left>h1 {
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 28px;
+#nav-left > h1 {
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
 }
 
-#nav-left>img {
-    width: 26.108px;
-    height: 25.452px;
-    transform: rotate(4.678deg);
+#nav-left > img {
+  width: 26.108px;
+  height: 25.452px;
+  transform: rotate(4.678deg);
 }
 
-#nav-wrap-left>h5 {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
+#logo {
+  background: url(logos/logo1.svg);
+  width: 26.108px;
+  height: 25.452px;
+  transform: rotate(4.678deg);
 }
 
-#nav-wrap-left>h5:hover,
-#nav-wrap-right>h5:hover,
-#nav-wrap-right>div:hover,
+#nav-wrap {
+  display: inline-flex;
+  align-items: center;
+  gap: 188px;
+}
+
+#nav-wrap-left {
+  display: flex;
+  align-items: flex-end;
+  gap: 55px;
+}
+
+#nav-wrap-right {
+  display: flex;
+  align-items: center;
+  gap: 9px;
+}
+
+#nav-wrap-left > h5 {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+#nav-wrap-left > h5:hover,
+#nav-wrap-right > h5:hover,
+#nav-wrap-right > div:hover,
 #arrow:hover,
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-
-
-#nav-wrap-left>h5>span {
-    font-weight: 600;
+#nav-wrap-left > h5 > span {
+  font-weight: 600;
 }
 
 #logo-3 {
-    display: flex;
-    width: 20px;
-    height: 20px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  width: 20px;
+  height: 20px;
+  justify-content: center;
+  align-items: center;
 }
 
-#nav-wrap-right>h5 {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 28px;
-    /* 175% */
+#nav-wrap-right > h5 {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
 }
 
-#nav-wrap-right>img {
-    width: 20px;
-    height: 20px;
-    flex-shrink: 0;
+#nav-wrap-right > img {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
 }
 
+/*  */
+/* CONTENT CSS */
 #page-container {
-    display: flex;
-    flex: 1 1 1px;
+  display: flex;
+  flex: 1 1 1px;
 }
 
+/* LEFT SIDE OF PAGE */
 #left-container {
-    z-index: 10;
-    padding-left: 100px;
+  z-index: 10;
+  padding-left: 100px;
 }
 
 #info-box {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 51px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 51px;
 }
 
 #info-top {
-    margin-top: 115px;
+  margin-top: 115px;
 }
 
-#info-top>h2 {
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 28px;
-    background: linear-gradient(101deg, #FD7452 18.7%, #FF4265 102.73%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+#info-top > h2 {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  background: linear-gradient(101deg, #fd7452 18.7%, #ff4265 102.73%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-#info-top>h3 {
-
-    font-family: Inter;
-    font-size: 52px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-    margin-top: 28px;
-    margin-bottom: 24px;
+#info-top > h3 {
+  font-family: Inter;
+  font-size: 52px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-top: 28px;
+  margin-bottom: 24px;
 }
 
-#info-top>p {
-    width: 496px;
-    height: 48px;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
+#info-top > p {
+  width: 496px;
+  height: 48px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
 }
 
-#info-top>h3>span {
-    background: linear-gradient(121deg, #FD653D 28.54%, #FF4167 68.18%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-family: Inter;
-    font-size: 52px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: normal;
+#info-top > h3 > span {
+  background: linear-gradient(121deg, #fd653d 28.54%, #ff4167 68.18%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: Inter;
+  font-size: 52px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
 }
 
 /* btn css */
 #btn-container {
-    display: flex;
-    align-items: center;
-    gap: 16px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
-#btn-container>button {
-    z-index: 10;
-    display: flex;
-    width: 159px;
-    height: 48px;
-    padding: 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    border-radius: 40px;
-    background: linear-gradient(86deg, #FF5A37 0.61%, #FF3778 127.62%);
-    border: none;
+#btn-container > button {
+  z-index: 10;
+  display: flex;
+  width: 159px;
+  height: 48px;
+  padding: 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 40px;
+  background: linear-gradient(86deg, #ff5a37 0.61%, #ff3778 127.62%);
+  border: none;
 }
 
-#btn-container>button>h3 {
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 28px;
+#btn-container > button > h3 {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
 }
 
 #arrow {
-    display: flex;
-    width: 16px;
-    height: 16px;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    flex-shrink: 0;
-    border-radius: 64px;
-    box-shadow: 2px 1px 5px 0px rgba(0, 0, 0, 0.23);
+  display: flex;
+  width: 16px;
+  height: 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 64px;
+  box-shadow: 2px 1px 5px 0px rgba(0, 0, 0, 0.23);
 }
 
-#arrow>img {
-    width: 16px;
-    height: 16px;
-    flex-shrink: 0;
+#arrow > img {
+  width: 16px;
+  height: 16px;
+  flex-shrink: 0;
 }
 
 button {
-    color: #FFF;
+  color: #fff;
 }
 
 button:hover,
 a:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-#btn-container>a {
-    color: #FFF;
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
-    /* 200% */
-    text-decoration-line: underline;
+#btn-container > a {
+  color: #fff;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-decoration-line: underline;
 }
 
 /* "experts wraper */
 #experts-wrap-1 {
-    display: inline-flex;
-    align-items: center;
-    gap: 19px;
-    margin-top: 94px;
+  display: inline-flex;
+  align-items: center;
+  gap: 19px;
+  margin-top: 94px;
 }
 
 #rectangle-2 {
-    width: 4px;
-    height: 50px;
-    background: linear-gradient(180deg, #FF583D 0%, #FF4364 100%);
+  width: 4px;
+  height: 50px;
+  background: linear-gradient(180deg, #ff583d 0%, #ff4364 100%);
 }
 
 #experts-wrap-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
 }
 
 #exp-t {
-    display: flex;
-    align-items: center;
-    gap: 4px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
 #exp-b {
-    width: 284px;
-    height: 48px;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
+  width: 284px;
+  height: 48px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
 }
 
 #exp-t-a {
-    display: flex;
-    width: 65px;
-    justify-content: space-between;
-    align-items: flex-start;
-    position: relative;
-    top: 0;
-    left: 0;
+  display: flex;
+  width: 65px;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: relative;
+  top: 0;
+  left: 0;
 }
 
 #exp-t-b {
-    padding-left: 4px;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
+  padding-left: 4px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
 }
 
 #exp-t-a-a,
 #exp-t-a-b {
-    width: 40px;
-    height: 40px;
-    flex-shrink: 0;
-    background: url(icons/person1.svg);
-    border-radius: 40px;
-    background-color: lightgray;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  background: url(icons/person1.svg);
+  border-radius: 40px;
+  background-color: lightgray;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
 }
 
 #exp-t-a-b {
-    background: url(icons/person2.svg);
-    position: absolute;
-    left: 28px;
+  background: url(icons/person2.svg);
+  position: absolute;
+  left: 28px;
 }
 
+/* RIGHT SIDE OF PAGE */
 
 #right-container {
-    margin-right: 134px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+  margin-right: 134px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 #right-wrap {
-    width: 516px;
-    height: 636px;
-    flex-shrink: 0;
-    border-radius: 240px 240px 0px 0px;
-    background: linear-gradient(31deg, #140119 1.55%, #5B0E4E 88.54%);
-    box-shadow: 0px 4px 250px 0px rgba(255, 201, 62, 0.25);
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
+  width: 516px;
+  height: 636px;
+  flex-shrink: 0;
+  border-radius: 240px 240px 0px 0px;
+  background: linear-gradient(31deg, #140119 1.55%, #5b0e4e 88.54%);
+  box-shadow: 0px 4px 250px 0px rgba(255, 201, 62, 0.25);
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
 
 #dog {
-    width: 513px;
-    height: 513px;
-    flex-shrink: 0;
-    background: url(images/dog.png);
+  width: 513px;
+  height: 513px;
+  flex-shrink: 0;
+  background: url(images/dog.png);
 }
 
 #dogo1 {
-    width: 57px;
-    height: 57px;
-    flex-shrink: 0;
-    border-radius: 57px;
-    /* border: 3px solid #BA92A7; */
-    background: url(icons/dogo1.svg);
-    position: absolute;
-    top: 664px;
-    left: 607px;
+  width: 57px;
+  height: 57px;
+  flex-shrink: 0;
+  border-radius: 57px;
+  /* border: 3px solid #BA92A7; */
+  background: url(icons/dogo1.svg);
+  position: absolute;
+  top: 664px;
+  left: 607px;
 }
 
 #dogo2 {
-    width: 67.614px;
-    height: 67.614px;
-    transform: rotate(-1.256deg);
-    flex-shrink: 0;
-    border-radius: 67.614px;
-    /* border: 3px solid #BA92A7; */
-    background: url(icons/dogo2.svg);
-    position: absolute;
-    top: 335px;
-    left: 601.89px;
+  width: 67.614px;
+  height: 67.614px;
+  transform: rotate(-1.256deg);
+  flex-shrink: 0;
+  border-radius: 67.614px;
+  /* border: 3px solid #BA92A7; */
+  background: url(icons/dogo2.svg);
+  position: absolute;
+  top: 335px;
+  left: 601.89px;
 }
 
 #dogo3 {
-    width: 52px;
-    height: 52px;
-    flex-shrink: 0;
-    border-radius: 52px;
-    /* border: 3px solid #BA92A7; */
-    background: url(icons/dogo3.svg);
-    position: absolute;
-    top: 134px;
-    left: 672px;
+  width: 52px;
+  height: 52px;
+  flex-shrink: 0;
+  border-radius: 52px;
+  /* border: 3px solid #BA92A7; */
+  background: url(icons/dogo3.svg);
+  position: absolute;
+  top: 134px;
+  left: 672px;
 }
 
 #dogo4 {
-    width: 86px;
-    height: 86px;
-    flex-shrink: 0;
-    border-radius: 86px;
-    /* border: 3px solid #BA92A7; */
-    background: url(icons/dogo4.svg);
-    position: absolute;
-    top: 172px;
-    left: 890px;
+  width: 86px;
+  height: 86px;
+  flex-shrink: 0;
+  border-radius: 86px;
+  /* border: 3px solid #BA92A7; */
+  background: url(icons/dogo4.svg);
+  position: absolute;
+  top: 172px;
+  left: 890px;
 }
 
 #dogo5 {
-    width: 80px;
-    height: 80px;
-    flex-shrink: 0;
-    border-radius: 80px;
-    /* border: 3px solid #BA92A7; */
-    background: url(icons/dogo5.svg);
-    position: absolute;
-    top: 100px;
-    left: 1100px;
+  width: 80px;
+  height: 80px;
+  flex-shrink: 0;
+  border-radius: 80px;
+  /* border: 3px solid #BA92A7; */
+  background: url(icons/dogo5.svg);
+  position: absolute;
+  top: 100px;
+  left: 1100px;
 }
 
+/*  */
+/* RADIAL CSS */
 
 #ellipse1 {
-    width: 659px;
-    height: 659px;
-    transform: rotate(3.965deg);
-    flex-shrink: 0;
-    border-radius: 659px;
-    background: radial-gradient(33.54% 33.54% at 50% 50%, rgba(255, 80, 101, 0.07) 0%, rgba(255, 82, 109, 0.00) 100%);
-    position: absolute;
-    top: -115px;
-    left: -268px;
+  width: 659px;
+  height: 659px;
+  transform: rotate(3.965deg);
+  flex-shrink: 0;
+  border-radius: 659px;
+  background: radial-gradient(
+    33.54% 33.54% at 50% 50%,
+    rgba(255, 80, 101, 0.07) 0%,
+    rgba(255, 82, 109, 0) 100%
+  );
+  position: absolute;
+  top: -115px;
+  left: -268px;
 }
 
 #ellipse2 {
-    width: 660px;
-    height: 660px;
-    transform: rotate(3.965deg);
-    flex-shrink: 0;
-    border-radius: 660px;
-    background: radial-gradient(33.54% 33.54% at 50% 50%, rgba(255, 185, 80, 0.07) 0%, rgba(255, 82, 109, 0.00) 100%);
-    position: absolute;
-    top: 99px;
-    left: -248px;
+  width: 660px;
+  height: 660px;
+  transform: rotate(3.965deg);
+  flex-shrink: 0;
+  border-radius: 660px;
+  background: radial-gradient(
+    33.54% 33.54% at 50% 50%,
+    rgba(255, 185, 80, 0.07) 0%,
+    rgba(255, 82, 109, 0) 100%
+  );
+  position: absolute;
+  top: 99px;
+  left: -248px;
 }
 
 #ellipse3 {
-    width: 659px;
-    height: 659px;
-    transform: rotate(3.965deg);
-    flex-shrink: 0;
-    border-radius: 659px;
-    background: radial-gradient(33.54% 33.54% at 50% 50%, rgba(157, 255, 80, 0.07) 0%, rgba(255, 82, 109, 0.00) 100%);
-    position: absolute;
-    top: 256px;
-    left: -192px;
+  width: 659px;
+  height: 659px;
+  transform: rotate(3.965deg);
+  flex-shrink: 0;
+  border-radius: 659px;
+  background: radial-gradient(
+    33.54% 33.54% at 50% 50%,
+    rgba(157, 255, 80, 0.07) 0%,
+    rgba(255, 82, 109, 0) 100%
+  );
+  position: absolute;
+  top: 256px;
+  left: -192px;
 }
 
 #logo2 {
-    background: url(logos/logo2.svg);
-    width: 13.649px;
-    width: 13.649px;
-    height: 12.754px;
-    transform: rotate(7.822deg);
-    flex-shrink: 0;
-    position: absolute;
-    top: 46px;
-    left: 385px;
+  background: url(logos/logo2.svg);
+  width: 13.649px;
+  width: 13.649px;
+  height: 12.754px;
+  transform: rotate(7.822deg);
+  flex-shrink: 0;
+  position: absolute;
+  top: 46px;
+  left: 385px;
 }
